samples/_failures_safe/1761261241_314316_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a48259ef.c: In function ‘main’:
./samples/SAFE/__tmp_a48259ef.c:151:5: error: expected expression at end of input
  151 |     if (!initialize_compression_context(&ctx, test_data,
      |     ^~
./samples/SAFE/__tmp_a48259ef.c:151:5: error: expected declaration or statement at end of input
